# yantrik-companion

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.build  README.md
crates/yantrik/: Cargo.toml
crates/yantrik-chat/src/: manager.rs  router.rs
crates/yantrik-chat/src/providers/: mod.rs  telegram.rs
crates/yantrik-companion-core/src/: config.rs
crates/yantrik-companion/src/: chat_bridge.rs  companion.rs
crates/yantrik-mcp/src/: server.rs
crates/yantrik-ml/src/llm/: api.rs  mod.rs
crates/yantrik/src/: main.rs
crates/yantrikdb-core/: Cargo.toml
crates/yantrikdb-server/src/: routes.rs
src/: background.rs  companion.rs  config.rs  context.rs  lib.rs
